# GROW_R502-A_fingerprint

./: Cargo.toml  README.md
ardiuno-code/: xiaoc3.ino
python-deployment/: README.md  main.py
src/: main.rs
